# autoresearch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: github-social.local.md  settings.json
.claude-plugin/: plugin.json
docs/: README.md
docs/explanation/: architecture.md  convergence-and-scoring.md  eval-skill-separation.md  expected-results.md  lifecycle.md  the-autoresearch-pattern.md
docs/how-to/: apply-changes.md  customize-iterations.md  integrate-with-skill-creator.md  interpret-results.md  manage-evals.md  recover-from-failure.md  run-improvement-loop.md
docs/reference/: agents.md  algorithm.md  cli.md  eval-schema.md  file-formats.md  scripts.md
docs/tutorials/: creating-evals-from-scratch.md  getting-started.md  improving-an-existing-skill.md
skills/autoresearch/: SKILL.md
skills/autoresearch/agents/: convergence-reporter.md  eval-doctor.md  improver.md
skills/autoresearch/evals/: evals.json
skills/autoresearch/references/: algorithm.md  eval-quality-rubric.md  mcp-eval-guide.md
skills/autoresearch/scripts/: __init__.py  dashboard.py  deterministic_checker.py  diff_report.py  results_log.py  score.py  snapshot.py  xml_eval_parser.py
tests/: test_dashboard.py  test_deterministic_checker.py  test_results_log.py  test_score.py  test_snapshot.py  test_xml_eval_parser.py
tests/fixtures/: evaluation_edge_cases.xml  sample-grading.json
tests/fixtures/mcp-server-sample/evals/: evaluation.xml
tests/fixtures/sample-skill-autoresearch/: results.tsv
tests/fixtures/sample-skill-autoresearch/candidate/: SKILL.md
(+16 files in other folders)
